--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -18,6 +18,7 @@
     "@storybook/blocks": "^7.6.20",
     "@storybook/react": "^7.6.20",
     "@storybook/react-vite": "^7.6.20",
+    "@storybook/test": "^7.6.20",
     "@storybook/testing-library": "^0.2.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
