--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -4,6 +4,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "tsup src/index.tsx --watch --dts --format esm,cjs",
     "build": "tsup src/index.tsx --dts --format esm,cjs"
