feat: initial release of ajk-ui components
Components:
- feat(core): implementación inicial de utilidades base
- feat(theme-utils): sistema de temas por industria
- feat(button): componente button con variantes
- feat(card): componente card con temas
- feat(nav): componente de navegación
- feat(header): componente de encabezado
- feat(footer): componente de pie de página
- feat(section): sistema de layouts y secciones
- docs: actualización de documentación en Storybook

This release includes:
- Core utilities and theme system
- Basic UI components with theme support
- Layout components with industry-specific themes
- Storybook documentation

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "storybook": "turbo run storybook",
+    "storybook": "turbo run storybook --",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build && changeset publish --access public",
