--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,29 +1,44 @@
 {
   "name": "@ajk-ui/docs",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "storybook dev -p 6006",
-    "storybook": "storybook dev -p 6006",
-    "build": "storybook build"
+    "dev": "storybook dev -p 6007",
+    "build": "storybook build",
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6007",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@ajk-ui/button": "workspace:*",
+    "@ajk-ui/card": "workspace:*",
+    "@ajk-ui/core": "workspace:*",
+    "@ajk-ui/footer": "workspace:*",
+    "@ajk-ui/header": "workspace:*",
+    "@ajk-ui/nav": "workspace:*",
+    "@ajk-ui/section": "workspace:*",
+    "@ajk-ui/theme-utils": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/blocks": "^7.6.20",
-    "@storybook/react": "^7.6.20",
-    "@storybook/react-vite": "^7.6.20",
-    "@storybook/test": "^7.6.20",
+    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-interactions": "^7.6.6",
+    "@storybook/addon-links": "^7.6.6",
+    "@storybook/blocks": "^7.6.6",
+    "@storybook/react": "^7.6.6",
+    "@storybook/react-vite": "^7.6.6",
     "@storybook/testing-library": "^0.2.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "storybook": "^7.6.20",
-    "tailwindcss": "^3.4.15",
-    "vite": "^4.4.9"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.6.6",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.1"
   }
 }
