--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -15,6 +15,9 @@
     "react": "^18.0.0",
     "tailwindcss": "^3.0.0"
   },
+  "dependencies": {
+    "@ajk-ui/theme-utils": "workspace:*"
+  },
   "devDependencies": {
     "@storybook/react": "^7.4.0",
     "@types/react": "^18.0.0",
