Actualizar package.json

--- a/packages/cart/package.json
+++ b/packages/cart/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
-    "@ajk-ui/nav": "workspace:*",
+    "@ajk-ui/sheet": "workspace:*",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
