--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -19,6 +19,7 @@
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/nav": "workspace:*",
+    "@ajk-ui/cart": "workspace:*",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
