--- a/packages/nav/package.json
+++ b/packages/nav/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
+    "@ajk-ui/data": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/cart": "workspace:*",
     "@ajk-ui/sheet": "workspace:*",
