--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "typeRoots": ["./node_modules/@types", "./types/*.d.ts"]
+  },
+  "include": ["apps/**/*", "packages/**/**/*", "./types/*.d.ts"]
 }
