--- a/packages/product-gallery/package.json
+++ b/packages/product-gallery/package.json
@@ -21,13 +21,16 @@
     "@ajk-ui/product": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "clsx": "^2.0.0",
+    "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@storybook/react": "^7.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8.0.0",
     "react": "^18.3.1",
     "tsup": "^8.0.0",
