--- a/packages/nav/package.json
+++ b/packages/nav/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/data": "workspace:*",
+    "@ajk-ui/auth": "workspace:*",
     "@ajk-ui/account": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/cart": "workspace:*",
