--- a/packages/user/package.json
+++ b/packages/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ajk-ui/account",
+  "name": "@ajk-ui/user",
   "version": "0.3.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -14,15 +14,6 @@
     "dev": "tsup src/index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
-  },
-  "dependencies": {
-    "@ajk-ui/core": "workspace:*",
-    "@ajk-ui/auth": "workspace:*",
-    "@ajk-ui/sheet": "workspace:*",
-    "@ajk-ui/login": "workspace:*",
-    "@ajk-ui/theme-utils": "workspace:*",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@storybook/react": "^7.0.0",
