--- a/packages/user/tsconfig.json
+++ b/packages/user/tsconfig.json
@@ -6,6 +6,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "../login/src/ButtonSignIn.tsx"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
