--- a/packages/product-list/package.json
+++ b/packages/product-list/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ajk-ui/product-detail",
+  "name": "@ajk-ui/product-list",
   "version": "0.3.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -18,13 +18,13 @@
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/data": "workspace:*",
-    "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/breadcrumb": "workspace:*",
-    "@ajk-ui/cart": "workspace:*",
-    "@ajk-ui/product-gallery": "workspace:*",
-    "@ajk-ui/product-info": "workspace:*",
-    "@ajk-ui/product-tabs": "workspace:*",
+    "@ajk-ui/filter-bar": "workspace:*",
+    "@ajk-ui/pagination": "workspace:*",
     "@ajk-ui/product": "workspace:*",
+    "@ajk-ui/product-grid": "workspace:*",
+    "@ajk-ui/theme-utils": "workspace:*",
+    "@ajk-ui/cart": "workspace:*",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
