--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/button": "workspace:*",
+    "@ajk-ui/themes": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
