--- a/packages/theme-utils/package.json
+++ b/packages/theme-utils/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
+    "@storybook/react": "^7.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.0.0",
