--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/modal": "workspace:*",
+    "@ajk-ui/button": "workspace:*",
+    "@ajk-ui/field": "workspace:*",
+    "@ajk-ui/input": "workspace:*",
+    "@ajk-ui/themes": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/auth": "workspace:*",
     "clsx": "^2.0.0",
