--- a/packages/product-info/package.json
+++ b/packages/product-info/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@ajk-ui/core": "workspace:*",
     "@ajk-ui/data": "workspace:*",
+    "@ajk-ui/button": "workspace:*",
+    "@ajk-ui/themes": "workspace:*",
     "@ajk-ui/theme-utils": "workspace:*",
     "@ajk-ui/product": "workspace:*",
     "clsx": "^2.0.0",
